--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p class="from">From your Bby 💌</p>
 <div class="music-player"><button onclick="document.getElementById('bg-music').play()">🎵 I'll sing this for you soon dont worry</button><audio id="bg-music" src="Everything.mp3"></audio></div>
         <div class="content">
-<p>Look, I know I haven't been the best lately, and I know you deserve more, so I made you this. It's not the best but I just want you to know that even despite how much we argue or even if how much we push one another, I'll always be the waves crashing on to you as you're the coast that allows us to watch the to the beautiful sunset which is love.</p>
+<p>Look, I know I haven't been the best lately, and I know you deserve more, so I made you this. It's not the best but I just want you to know that even despite how much we argue or even if how much we push one another, I'll always be the waves crashing on to you as you're the coast that allows us to watch  the beautiful sunset which is love.</p>
 
 <p>Storms sometimes get in a way of that view, so take my hand, and let's weather this out together okay? Because you're the best, and you deserve the best.</p>
 
